util_lib = static_library(
    'util',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
    ],
    sources : [
        'brickprotect.c',
        'brickprotect.h',
        'dprintf.c',
        'dprintf.h',
        'dump.c',
        'dump.h',
        'imagemanipulation.c',
        'imagemanipulation.h',
    ],
)
